# cardano-transaction-lib

./: .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .mlc_config.json  .tidyrc.json  1q  ;  Address.html  Aeson.Decode.Decoders.html  Aeson.Decode.html  Aeson.Encode.html  Aeson.Utils.html  Aeson.html  Affjax.RequestBody.html  Affjax.RequestHeader.html  Affjax.ResponseFormat.html  Affjax.ResponseHeader.html  Affjax.StatusCode.html  Affjax.html  Ansi.Codes.html  Ansi.Output.html  BalanceTx.Collateral.Select.html  BalanceTx.Collateral.html  BalanceTx.Error.html  BalanceTx.ExUnitsAndMinFee.html  BalanceTx.FakeOutput.html  BalanceTx.Helpers.html  BalanceTx.Types.html  BalanceTx.UtxoMinAda.html  BalanceTx.html  Base64.html  CHANGELOG.md  Cardano.AsCbor.html  Cardano.Collateral.FakeOutput.html  Cardano.Collateral.Select.html  Cardano.Collateral.UtxoMinAda.html  Cardano.FromData.html  Cardano.FromMetadata.html  Cardano.MessageSigning.html  (+1594 more)
.github/: pull_request_template.md
doc/: Secp256k1-support.md  babbage-features.md  balancing.md  blockfrost.md  cardano-testnet-testing.md  caveats.md  cip-25-nfts.md  comparisons.md  contract-environment.md  ctl-as-dependency.md  custom-query-layers.md  development.md  e2e-testing.md  faq.md  getting-started.md  importing-scripts.md  key-management.md  keydir.md  limitations.md  new-constraints.md  plutip-testing.md  plutus-comparison.md  plutus-data.md  production.md  query-layers.md  runtime.md  secp256k1-support.md  side-by-side-CTL-and-Plutus-comparison.md  side-by-side-ctl-plutus-comparison.md  staking.md  test-plan.md  test-utils.md  testing.md  tx-chaining.md  using-ctl.md  using-from-js.md  video-intro.md  wallet-support.md
esbuild/: bundle.js  config.js  serve.js
examples/: AdditionalUtxos.purs  AlwaysFails.purs  AlwaysMints.js  AlwaysMints.purs  AlwaysSucceeds.js  AlwaysSucceeds.purs  AwaitTxConfirmedWithTimeout.purs  BalanceTxConstraints.purs  ByUrl.js  ByUrl.purs  ChangeGeneration.purs  Cip30.purs  Combined.purs  ConcurrentSpending.purs  ContractTestUtils.purs  Datum42.js  Datum42.purs  Datums.purs  Demo.purs  DropTokens.purs  ECDSA.js  ECDSA.purs  Eternl.purs  ExUnits.js  ExUnits.purs  FakeTime.purs  Gero.purs  Helpers.purs  IncludeDatum.js  IncludeDatum.purs  InlineDatum.purs  Lose7Ada.js  Lose7Ada.purs  ManyAssets.purs  MintsMultipleTokens.js  MintsMultipleTokens.purs  MultipleRedeemers.js  MultipleRedeemers.purs  MultipleTimeConstraints.purs  MyTest.js  (+34 more)
frontend/: index.js
html/: Address.html  Aeson.Decode.Decoders.html  Aeson.Decode.html  Aeson.Encode.html  Aeson.Utils.html  Aeson.html  Affjax.RequestBody.html  Affjax.RequestHeader.html  Affjax.ResponseFormat.html  Affjax.ResponseHeader.html  Affjax.StatusCode.html  Affjax.html  Ansi.Codes.html  Ansi.Output.html  BalanceTx.html  Cardano.Types.Transaction.html  Cardano.Types.TransactionUnspentOutput.html  Cardano.Types.Value.html  Constants.Babbage.html  Contract.Address.html  Contract.Aeson.html  Contract.AssocMap.html  Contract.AuxiliaryData.html  Contract.Chain.html  Contract.Credential.html  Contract.Hashing.html  Contract.Monad.html  Contract.Numeric.Convert.html  Contract.Numeric.NatRatio.html  Contract.Numeric.Natural.html  Contract.Numeric.Rational.html  Contract.PlutusData.html  Contract.Prelude.html  Contract.Prim.Any.html  Contract.Prim.ByteArray.html  Contract.ProtocolParameters.Babbage.html  Contract.ProtocolParameters.html  Contract.ScriptLookups.html  Contract.Scripts.html  Contract.Time.html  (+820 more)
index/: meta.js  modules.js  packages.js
nix/: autogen-warning.sh  ctl-server-nixos-module.nix  default.nix  dev-shell.nix  lib.nix  runtime.nix  template-checks.nix  test-nixos-configuration.nix
plutip-server/: .envrc  README.md  cabal.project  default.nix  fourmolu.yaml  hie.yaml  plutip-server.cabal
plutip-server/src/: Api.hs  Main.hs  Types.hs
plutip-server/src/Api/: Handlers.hs
purescript/: Makefile  node-packages.nix  package.json  spago.dhall
scripts/: bundle-check.sh  examples-imports-check.sh  examples-links-fixup.lua  generate-html-docs.sh  generate-keys.sh  header.html  import-fixer.sh  pandoc.css  readme-link-fixup.lua  template-check.sh  template.html  title-from-markdown.lua  whitespace-check.sh
seabug_contracts/: CallContract.purs  Helpers.purs  MarketPlace.js  MarketPlace.purs  Metadata.purs  MintingPolicy.js  MintingPolicy.purs  README.md  Token.purs  Types.purs  api.js
server/: Makefile  README.md  STANDARDS.md  cabal.project  cardano-browser-tx-server.cabal  ctl-server.cabal  shell.nix
server/config/: pparams.json
server/exe/: Main.hs
server/nix/: default.nix  haskell.nix  nixos-module.nix
server/plutus-scripts/: Main.hs  Scripts.hs
server/src/: Api.hs  Main.hs  Types.hs  Utils.hs
server/src/Api/: Apply.hs  Fees.hs  Handlers.hs
server/src/Ogmios/: Parser.hs  Query.hs
server/src/Plutus/: Instances.hs
server/test/: ApplyArgs.hs  Main.hs  ogmios.json  ogmios2.json
src/: Ada.purs  Address.purs  Aeson.js  Aeson.purs  BalanceTx.purs  Base64.js  Base64.purs  ConstrIndex.purs  ConstrIndices.purs  DatumCacheWsp.purs  Deserialization.js  Deserialization.purs  Equipartition.purs  Error.purs  FfiHelper.purs  FfiHelpers.js  FfiHelpers.purs  FromData.purs  Hashing.js  Hashing.purs  Helpers.js  Helpers.purs  Internal.js  Internal.purs  IsData.purs  JsWebSocket.js  JsWebSocket.purs  Lib.js  Lib.purs  Main.purs  MultiMap.purs  NativeScripts.purs  Ogmios.js  Ogmios.purs  PlutusData.purs  PreBalanceTx.purs  ProtocolParametersAlonzo.purs  QueryM.js  QueryM.purs  ReindexRedeemers.purs  (+16 more)
test/: Aeson.purs  AffInterface.purs  ApplyArgs.js  ApplyArgs.purs  ArbitraryJson.purs  Base64.purs  Blockfrost.purs  ByteArray.purs  Crypto.purs  CslGc.js  CslGc.purs  Data.purs  Deserialization.purs  E2E.purs  Equipartition.purs  FinalizeTx.purs  Fixtures.purs  GenerateOgmiosFixtures.purs  Hashing.purs  Helpers.purs  Integration.purs  Logging.purs  Main.purs  MinFee.purs  MultipleRedeemers.purs  MustSpendTotal.purs  NativeScript.purs  NetworkId.purs  OgmiosAeson.purs  OgmiosDatumCache.purs  OneShot.purs  Parallel.purs  Parser.purs  Partition.purs  (+27 more)
(+3612 files in other folders)
