cabal-version: 2.4
name:          ctl-server
version:       1.0.0
author:        mlabs
build-type:    Simple

common common-language
  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MonoLocalBinds
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    NamedFieldPuns
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances

common common-options
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies

library
  import:          common-language
  import:          common-options
  hs-source-dirs:  src
  build-depends:
    , aeson
    , base
    , base16-bytestring
    , bytestring
    , cardano-api
    , cardano-binary
    , cardano-ledger-core
    , cardano-ledger-alonzo
    , cborg
    , containers
    , exceptions
    , extra
    , integer-logarithms
    , lens
    , mtl
    , plutus-ledger-api
    , plutus-tx
    , serialise
    , servant
    , servant-client
    , servant-docs
    , servant-server
    , strict-containers
    , text
    , wai-cors
    , warp
    , cardano-ledger-shelley-ma
    , network
    , websockets
    , unordered-containers
    , attoparsec

  exposed-modules:
    Api
    Api.Handlers
    Paths_ctl_server
    Types
    Utils
    Ogmios.Query
    Ogmios.Parser

executable ctl-server
  import:           common-language
  import:           common-options
  ghc-options:      -threaded -rtsopts
  default-language: Haskell2010
  hs-source-dirs:   exe
  main-is:          Main.hs
  build-depends:
    , base
    , cardano-api
    , ctl-server
    , http-types
    , optparse-applicative
    , wai
    , wai-logger
    , warp

test-suite test
  import:         common-language
  import:         common-options
  ghc-options:    -threaded -rtsopts
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , base
    , bytestring
    , cardano-api
    , ctl-server
    , hspec
    , hspec-core
    , http-client
    , http-types
    , plutus-ledger-api
    , plutus-tx
    , servant
    , servant-client
    , servant-server
    , warp
    , text
    , containers
