cabal-version: 2.4
name:          ctl-server
version:       1.0.0
author:        mlabs
build-type:    Simple

common common-language
  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DuplicateRecordFields
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MonoLocalBinds
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    NamedFieldPuns
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances

common common-options
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies

library
  import:          common-language
  import:          common-options
  hs-source-dirs:  src
  build-depends:
    , aeson
    , base
    , base16-bytestring
    , bytestring
    , cborg
    , containers
    , exceptions
    , extra
    , flat
    , plutus-ledger-api
    , serialise
    , servant
    , servant-client
    , servant-docs
    , servant-server
    , text
    , wai-cors
    , warp
    , network

  exposed-modules:
    Api
    Api.Handlers
    Paths_ctl_server
    Plutus.Instances
    Types

executable ctl-server
  import:           common-language
  import:           common-options
  ghc-options:      -threaded -rtsopts
  default-language: Haskell2010
  hs-source-dirs:   exe
  main-is:          Main.hs
  build-depends:
    , base
    , ctl-server
    , http-types
    , optparse-applicative
    , wai
    , wai-logger
    , warp

test-suite test
  import:         common-language
  import:         common-options
  ghc-options:    -threaded -rtsopts
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , base
    , ctl-server
    , hspec
    , hspec-core
    , http-client
    , plutus-ledger-api
    , servant
    , servant-client
    , servant-server
    , warp
    , containers
